# daedalus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/del/: del_types.h
include/del/actions/: action.h  actions_types.h
include/del/bisimulation/: bisimulation_types.h  bisimulator.h  bounded_bisimulation_types.h  bounded_partition_refinement.h  partition_refinement.h
include/del/formulae/: all_formulas.h  formula.h
include/del/formulae/modal/: box_formula.h  diamond_formula.h
include/del/formulae/propositional/: and_formula.h  atom_formula.h  false_formula.h  imply_formula.h  not_formula.h  or_formula.h  true_formula.h
include/del/formulas/: formula_types.h
include/del/formulas/propositional/: and_formula.h  atom_formula.h  false_formula.h  or_formula.h
include/del/language/: label.h  language.h  language_types.h
include/del/semantics/delphic/: delphic_utils.h  model_checker.h
include/del/semantics/delphic/actions/: eventuality.h  eventuality_spectrum.h  eventuality_types.h
include/del/semantics/delphic/states/: possibility.h  possibility_spectrum.h  possibility_types.h
include/del/semantics/delphic/update/: union_updater.h
include/del/semantics/kripke/: model_checker.h
include/del/semantics/kripke/actions/: action.h  actions_types.h
include/del/semantics/kripke/bisimulation/: bisimulation_types.h  bisimulator.h  bounded_bisimulation_types.h  bounded_contraction_builder.h  bounded_identification.h  bounded_partition_refinement.h  partition_refinement.h
include/del/semantics/kripke/states/: label.h  signature.h  state.h  states_types.h
include/del/semantics/kripke/update/: updater.h
include/del/states/: label.h  state.h  states_types.h
include/del/update/: updater.h
include/search/: frontier.cpp  frontier.h  planner.h  planning_task.h  search_space.h  search_types.h  strategies.h
include/search/delphic/: delphic_planner.h  delphic_planning_task.h  delphic_search_space.h
include/utils/: bit_deque.h  storage.h  storage_types.h  storages_handler.h  time_utils.h  timer.h
include/utils/printer/: formula_printer.h
src/: main.cpp
src/del/actions/: action.cpp
src/del/bisimulation/: bisimulator.cpp  bounded_partition_refinement.cpp  partition_refinement.cpp
src/del/formulae/: formula.cpp
src/del/formulae/modal/: box_formula.cpp  diamond_formula.cpp
src/del/formulae/propositional/: and_formula.cpp  atom_formula.cpp  false_formula.cpp  imply_formula.cpp  not_formula.cpp  or_formula.cpp  true_formula.cpp
src/del/language/: label.cpp  language.cpp
src/del/semantics/delphic/: delphic_utils.cpp  model_checker.cpp
src/del/semantics/delphic/actions/: eventuality.cpp  eventuality_spectrum.cpp
src/del/semantics/delphic/states/: possibility.cpp  possibility_spectrum.cpp
src/del/semantics/delphic/update/: union_updater.cpp
src/del/semantics/kripke/: model_checker.cpp
src/del/semantics/kripke/actions/: action.cpp
src/del/semantics/kripke/bisimulation/: bisimulator.cpp  bounded_contraction_builder.cpp  bounded_identification.cpp  bounded_partition_refinement.cpp  partition_refinement.cpp
src/del/semantics/kripke/states/: label.cpp  signature.cpp  state.cpp
src/del/semantics/kripke/update/: updater.cpp
src/del/states/: label.cpp  state.cpp
src/del/update/: updater.cpp
src/search/: planner.cpp  planning_task.cpp  search_space.cpp
src/search/delphic/: delphic_planner.cpp  delphic_planning_task.cpp  delphic_search_space.cpp
src/utils/: storage.cpp
src/utils/printer/: formula_printer.cpp
tests/: action_tester.cpp  action_tester.h  bisimulation_tester.cpp  bisimulation_tester.h  formula_tester.cpp  formula_tester.h  printer.cpp  printer.h  search_tester.cpp  search_tester.h  update_tester.cpp  update_tester.h
tests/bisimulation/: bisimulation_tester.cpp  bisimulation_tester.h
tests/builder/: action_builder.cpp  action_builder.h  language_builder.cpp  language_builder.h  state_builder.cpp  state_builder.h
tests/builder/domains/: active_muddy_children.cpp  active_muddy_children.h  coin_in_the_box.cpp  coin_in_the_box.h  collaboration_communication.cpp  collaboration_communication.h  consecutive_numbers.cpp  consecutive_numbers.h  domain_utils.cpp  domain_utils.h  eavesdropping.cpp  eavesdropping.h  gossip.cpp  gossip.h  grapevine.cpp  grapevine.h  ma_star_utils.cpp  ma_star_utils.h  selective_communication.cpp  selective_communication.h  switches.cpp  switches.h  tiger.cpp  tiger.h
tests/results/ijcai_results/active_muddy_child/: results1.csv  results2.csv
tests/results/ijcai_results/coin_in_the_box/: results.csv
tests/results/ijcai_results/collaboration_through_communication/: results.csv
tests/results/ijcai_results/consecutive_numbers/: results.csv
tests/results/ijcai_results/eavesdropping/: results.csv
tests/results/ijcai_results/gossip/: results.csv
tests/results/ijcai_results/grapevine/: results.csv
tests/results/ijcai_results/selective_communication/: results1.csv  results2.csv
tests/results/ijcai_results/tiger/: results.csv
tests/scripts/: rerun_20.sh  run_all.sh  run_amc.sh  run_cb.sh  run_cc.sh  run_cn.sh  run_eav.sh  run_gos.sh  run_gra.sh  run_sc.sh  run_tig.sh
tests/scripts/thesis/coin_in_the_box/: results_delphic_unbounded.csv  results_kripke_bounded.csv  results_kripke_unbounded.csv
tests/scripts/thesis/time_results/active_muddy_children/: results_delphic_unbounded.csv  results_kripke_bounded.csv  results_kripke_unbounded.csv
tests/scripts/thesis/time_results/coin_in_the_box/: results_delphic_unbounded.csv  results_kripke_bounded.csv  results_kripke_unbounded.csv
tests/scripts/thesis/time_results/collaboration_through_communication/: results_delphic_unbounded.csv  results_kripke_bounded.csv  results_kripke_unbounded.csv
tests/scripts/thesis/time_results/consecutive_numbers/: results_delphic_unbounded.csv  results_kripke_bounded.csv  results_kripke_unbounded.csv
